--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
-version: '3.7'
-
+version: "3.8"
 services:
-  sample:
-    container_name: sample
+  client:
+    stdin_open: true
     build:
       context: .
-      dockerfile: Dockerfile
-    volumes:
-      - '.:/app'
-      - '/app/node_modules'
+      dockerfile: Dockerfile.dev
     ports:
-      - 3001:3000
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      - "3000:3000"
+    volumes:
+      - "/app/node_modules"
+      - "./:/app"
