--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
     "redux": "^4.0.5",
     "typescript": "^3.9.5",
     "uuid": "^3.4.0",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
+    "winston": "^3.3.3",
     "@types/x-ray": "^2.3.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "x-ray": "^2.3.4",
-    "eslint": "^7.12.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-typescript": "^6.3.2",
     "eslint-plugin-import": "^2.22.1",
@@ -73,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
