--- a/package.json
+++ b/package.json
@@ -6,6 +6,44 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
+    "color-between": "^1.0.2",
+    "cytoscape": "^3.16.2",
+    "d3": "^5.16.0",
+    "d3-geo": "^1.12.1",
+    "eslint": "^7.12.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-typescript": "^6.3.2",
+    "eslint-plugin-import": "^2.22.1",
+    "geojson": "^0.5.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "logform": "^2.2.0",
+    "node-sass": "^4.14.1",
+    "ol": "^6.4.3",
+    "polylabel": "^1.1.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^2.9.0",
+    "react-cytoscapejs": "^1.2.1",
+    "react-dom": "^17.0.1",
+    "react-graph-network": "^1.0.6",
+    "react-json-view": "^1.19.1",
+    "react-leaflet": "^2.8.0",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "react-toastify": "^5.5.0",
+    "redux": "^4.0.5",
+    "typescript": "^3.9.7",
+    "uuid": "^3.4.0",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -29,56 +67,14 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^3.4.9",
-    "@types/x-ray": "^2.3.3",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.3",
-    "color-between": "^1.0.2",
-    "cytoscape": "^3.16.2",
-    "d3": "^5.16.0",
-    "d3-geo": "^1.12.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-typescript": "^6.3.2",
-    "eslint-plugin-import": "^2.22.1",
-    "geojson": "^0.5.0",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "logform": "^2.2.0",
-    "node-sass": "^4.14.1",
-    "ol": "^6.4.3",
-    "polylabel": "^1.1.0",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
-    "react-burger-menu": "^2.9.0",
-    "react-cytoscapejs": "^1.2.1",
-    "react-dom": "^16.14.0",
-    "react-graph-network": "^1.0.6",
-    "react-json-view": "^1.19.1",
-    "react-leaflet": "^2.8.0",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
-    "react-toastify": "^5.5.0",
-    "redux": "^4.0.5",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "typescript": "^3.9.7",
-    "uuid": "^3.4.0",
-    "winston": "^3.3.3",
-    "x-ray": "^2.3.4"
+    "@types/uuid": "^3.4.9"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "version-patch": "npm version patch",
-    "process": "node ./src/__scripts__/5etools.mjs"
+    "version-patch": "npm version patch"
   },
   "eslintConfig": {
     "extends": "react-app"
