bunch of changes

--- a/package.json
+++ b/package.json
@@ -6,44 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.3",
-    "color-between": "^1.0.2",
-    "cytoscape": "^3.16.2",
-    "d3": "^5.16.0",
-    "d3-geo": "^1.12.1",
-    "eslint": "^7.12.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-typescript": "^6.3.2",
-    "eslint-plugin-import": "^2.22.1",
-    "geojson": "^0.5.0",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "logform": "^2.2.0",
-    "node-sass": "^4.14.1",
-    "ol": "^6.4.3",
-    "polylabel": "^1.1.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-burger-menu": "^2.9.0",
-    "react-cytoscapejs": "^1.2.1",
-    "react-dom": "^17.0.1",
-    "react-graph-network": "^1.0.6",
-    "react-json-view": "^1.19.1",
-    "react-leaflet": "^2.8.0",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
-    "react-toastify": "^5.5.0",
-    "redux": "^4.0.5",
-    "typescript": "^3.9.7",
-    "uuid": "^3.4.0",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -67,17 +29,112 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^3.4.9"
+    "@types/uuid": "^3.4.9",
+    "@typescript-eslint/eslint-plugin": "^4",
+    "@typescript-eslint/parser": "^4",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
+    "color-between": "^1.0.2",
+    "cytoscape": "^3.16.2",
+    "d3": "^5.16.0",
+    "d3-geo": "^1.12.1",
+    "eslint": "^7.12.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-typescript": "^6.3.2",
+    "eslint-plugin-import": "^2.22.1",
+    "geojson": "^0.5.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "logform": "^2.2.0",
+    "node-sass": "^4.14.1",
+    "ol": "^6.4.3",
+    "polylabel": "^1.1.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^2.9.0",
+    "react-cytoscapejs": "^1.2.1",
+    "react-dom": "^17",
+    "react-graph-network": "^1.0.6",
+    "react-json-view": "^1.19.1",
+    "react-leaflet": "^2.8.0",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "react-toastify": "^5.5.0",
+    "redux": "^4.0.5",
+    "typescript": "^4",
+    "uuid": "^3.4.0",
+    "winston": "^3.3.3"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "version-patch": "npm version patch"
+    "version-patch": "npm version patch",
+    "lint": "eslint ."
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app"],
+    "rules": {
+      "indent": "off"
+    },
+    "overrides": [
+      {
+        "files": ["**/*.ts?(x)"],
+        "rules": {
+          "no-array-constructor": "off",
+          "no-empty-function": "off",
+          "no-unused-vars": "warn",
+          "no-var": "error",
+          "prefer-const": "error",
+          "no-use-before-define": "off",
+          "arrow-parens": ["error", "as-needed", { "requireForBlockBody": true }],
+          "no-multiple-empty-lines": "error",
+          "prefer-rest-params": "error",
+          "no-trailing-spaces": "error",
+          "max-len": ["warn", { "code": 840 }],
+          "react/prop-types": "off",
+          "react/prefer-stateless-function": "off",
+          "react/jsx-boolean-value": ["error", "always"],
+          "no-warning-comments": ["warn", { "terms": ["todo", "TODO"] }],
+          "import/prefer-default-export": "off",
+          "import/no-default-export": "error",
+          "import/order": ["error", {
+            "newlines-between": "always-and-inside-groups",
+            "alphabetize": {
+              "order": "asc"
+            }
+          }],
+          "quotes": ["error", "double"],
+          "camelcase": "warn",
+          "@typescript-eslint/indent": ["warn", 2],
+          "@typescript-eslint/quotes": ["warn", "double"],
+          "@typescript-eslint/no-array-constructor": "error",
+          "@typescript-eslint/adjacent-overload-signatures": "error",
+          "@typescript-eslint/ban-types": "error",
+          "@typescript-eslint/consistent-type-assertions": "error",
+          "@typescript-eslint/explicit-function-return-type": "warn",
+          "@typescript-eslint/member-delimiter-style": "error",
+          "@typescript-eslint/no-empty-function": "error",
+          "@typescript-eslint/no-empty-interface": "error",
+          "@typescript-eslint/no-explicit-any": "error",
+          "@typescript-eslint/no-inferrable-types": "error",
+          "@typescript-eslint/no-misused-new": "error",
+          "@typescript-eslint/no-namespace": "error",
+          "@typescript-eslint/no-non-null-assertion": "error",
+          "@typescript-eslint/no-this-alias": "error",
+          "@typescript-eslint/no-unused-vars": "error",
+          "@typescript-eslint/no-use-before-define": "error",
+          "@typescript-eslint/no-var-requires": "error",
+          "@typescript-eslint/prefer-namespace-keyword": "error",
+          "@typescript-eslint/triple-slash-reference": "error",
+          "@typescript-eslint/type-annotation-spacing": "error"
+        }
+      }
+    ]
   },
   "browserslist": {
     "production": [
