--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext",
+      "esnext"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -17,19 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "noImplicitAny": false,
+    "noFallthroughCasesInSwitch": true
   },
+  "exclude": [
+    "**/node_modules/*"
+  ],
   "include": [
-    "src/**/*",
-    "src/@types",
-    "src/@data",
-    "src/@data/worldMap",
-    "src/@data/features",
-    "src/Constants/*",
-    "src/ReduxStore/*",
-    "src/Utilities/*",
-    "src/Components/*",
-    "src/Style/*",
+    "src"
   ]
 }
