fix linting issues being broken

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": [
-    "**/node_modules/*"
+    "**/node_modules/*",
+    "build/**",
   ],
   "include": [
     "src"
