--- a/package.json
+++ b/package.json
@@ -120,15 +120,7 @@
             "error",
             "always"
           ],
-          "no-warning-comments": [
-            "warn",
-            {
-              "terms": [
-                "todo",
-                "TODO"
-              ]
-            }
-          ],
+          "no-warning-comments": ["off"],
           "import/prefer-default-export": "off",
           "import/no-default-export": "error",
           "import/order": [
