--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "color-between": "^1.0.2",
-    "crypto-classic-playfair": "^1.0.0",
     "cytoscape": "^3.16.2",
     "d3": "^5.16.0",
     "d3-geo": "^1.12.1",
@@ -63,6 +62,7 @@
     "redux": "^4.0.5",
     "typescript": "^4",
     "uuid": "^3.4.0",
+    "vigenere-cipher": "^1.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
