--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "logform": "^2.2.0",
-    "node-sass": "^4.14.1",
     "ol": "^6.4.3",
     "polylabel": "^1.1.0",
     "react": "^17.0.1",
@@ -60,6 +59,7 @@
     "react-scripts": "^4.0.0",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
+    "sass": "^1.49.7",
     "typescript": "^4",
     "uuid": "^3.4.0",
     "vigenere-cipher": "^1.0.0",
